Added basic structure to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <link type="text/css" rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <div class="header-container">
+        <div class="header">
+
+        </div>
+        <div class="navigation">
+
+        </div>
+        <div class="main-content">
+            <div class="sidebar">
+
+            </div>
+            <div class="game-area">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
