Added style for basic page

--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
     <link type="text/css" rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div class="header-container">
-        <div class="header">
-
-        </div>
-        <div class="navigation">
-
+    <div class="container">
+        <div class="header-container">
+            <div class="header">
+                <p>ianselby.com</p>
+            </div>
+            <div class="navigation">
+                <p>navigation</p>
+            </div>
         </div>
         <div class="main-content">
             <div class="sidebar">
-
+                <p>sidebar</p>
             </div>
             <div class="game-area">
-                
+                <p>content</p>
             </div>
+        </div>
+        
+        <div class="footer">
+            <p>footer</p>
         </div>
     </div>
 </body>
