--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/script.js" defer></script>
     <link type="text/css" rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
                 <p>sidebar</p>
             </div>
             <div class="game-area">
-                <p>content</p>
+                
             </div>
         </div>
         
