Added buttons to clear the grid and set its size.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
         <div class="main-content">
             <div class="sidebar">
-                <p>sidebar</p>
+                <p>OPTIONS</p>
+                <button class="btn" id="clear">Clear the Grid</button>
+                <button class="btn" id="setSize">Set Grid Size</button>
             </div>
             <div class="game-area">
                 
