Added code to not paint when the left mouse button is clicked.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <label for="colourpicker">Chosen colour</label>
                     <input type="color" id="colourpicker" value="#cccccc">
                 </form>
+                <p class="instructions">Hold down the left mouse button to move across the grid without painting</p>
             </div>
             <div class="game-area">
                 
