--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                 </form>
                 <p class="instructions">Hold down the left mouse button to move across the grid without painting</p>
             </div>
-            <div class="game-area">
-                
-            </div>
+            <div class ="game-area-container">
+                <div class="game-area">
+                </div>
+           </div>
         </div>
-        
         <div class="footer">
             <p>footer</p>
         </div>
