added code to darken and lighten colours by 10% on each pass.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
                         <input type="radio" name="colorMode" value="erase">
                         Erase
                     </label> 
+                    <label>
+                        <input type="radio" name="colorMode" value="darken">
+                        Darken
+                    </label> 
+                    <label>
+                        <input type="radio" name="colorMode" value="lighten">
+                        Lighten
+                    </label> 
+
                     <label for="colourpicker">Chosen colour</label>
                     <input type="color" id="colourpicker" value="#cccccc">
                 </form>
